# ari-prediction-app

./: .gitignore  README.md  randomforest.py  top12.csv
ari_prediction_app/: README.md  start_backend.sh
ari_prediction_app/backend/: model_metadata.json
ari_prediction_app/frontend/: package-lock.json  package.json  tsconfig.json  vercel.json
ari_prediction_app/frontend/api/: health.py  predict.py
ari_prediction_app/frontend/app/: globals.css  page.tsx
backend-local/: main.py  requirements.txt
frontend/: pyproject.toml  vercel.json
frontend/api/: health.py
frontend/app/: layout.tsx
