[project]
name = "ari-prediction-api"
version = "1.0.0"
description = "ARI Prediction API serverless functions"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "joblib==1.3.2",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
]

